# ff7-lgp-explorer

./: CLAUDE.md  LGP_FORMAT_SPECIFICATION.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  updater.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml
public/: manifest.json
src/: App.css  App.jsx  battleAnimFile.ts  fftext.ts  fieldfile.ts  hrcfile.ts  index.css  lgp.ts  lzss.ts  pfile.ts  skeleton.ts  texfile.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: battle-names.json  char-names.json  model-animations.json
src/components/: BackgroundColorPicker.css  BackgroundColorPicker.jsx  FieldPreview.css  FieldPreview.jsx  FileList.css  FileList.jsx  HRCPreview.jsx  HexViewer.css  HexViewer.jsx  PModelPreview.jsx  QuickLook.css  QuickLook.jsx  RSDPreview.css  RSDPreview.jsx  ScriptsPreview.css  ScriptsPreview.jsx  SkeletonPreview.css  SkeletonPreview.jsx  StatusBar.css  StatusBar.jsx  TexPreview.css  TexPreview.jsx  Toolbar.css  Toolbar.jsx
src/utils/: fileService.ts  fileTypes.ts  hierarchy.ts  platform.ts  settings.ts  updater.ts
